--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@ var items = [
 	{id: 'aufr2gt_2', image: './au/f/ra/2/gt/2.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr2ob_1', image: './au/f/ra/2/oyb/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr2ob_2', image: './au/f/ra/2/oyb/2.jpg', race: 'au ra', sex: 'female'},
+	{id: 'aufr2ob_3', image: './au/f/ra/2/oyb/3.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr2rp_1', image: './au/f/ra/2/rp/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr3_1', image: './au/f/ra/3/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr3_2', image: './au/f/ra/3/2.jpg', race: 'au ra', sex: 'female'},
@@ -315,8 +316,10 @@ var items = [
 	{id: 'aufr3ob_3', image: './au/f/ra/3/oyb/3.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr3rp_1', image: './au/f/ra/3/rp/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr3rp_3', image: './au/f/ra/3/rp/3.jpg', race: 'au ra', sex: 'female'},
+	{id: 'aufr3rp_4', image: './au/f/ra/3/rp/4.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr4_1', image: './au/f/ra/4/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr4_2', image: './au/f/ra/4/2.jpg', race: 'au ra', sex: 'female'},
+	{id: 'aufr4_3', image: './au/f/ra/4/3.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr4bw_1', image: './au/f/ra/4/blw/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr4bw_2', image: './au/f/ra/4/blw/2.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufr4bp_1', image: './au/f/ra/4/bp/1.jpg', race: 'au ra', sex: 'female'},
@@ -333,6 +336,7 @@ var items = [
 	{id: 'aufx2bp_1', image: './au/f/xa/2/bp/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx2gt_1', image: './au/f/xa/2/gt/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx2rp_1', image: './au/f/xa/2/rp/1.jpg', race: 'au ra', sex: 'female'},
+	{id: 'aufx2rp_2', image: './au/f/xa/2/rp/2.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx3_1', image: './au/f/xa/3/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx3bw_1', image: './au/f/xa/3/blw/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx3gt_1', image: './au/f/xa/3/gt/1.jpg', race: 'au ra', sex: 'female'},
@@ -350,6 +354,7 @@ var items = [
 	{id: 'aufx4bp_4', image: './au/f/xa/4/bp/4.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx4bp_5', image: './au/f/xa/4/bp/5.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx4bp_6', image: './au/f/xa/4/bp/6.jpg', race: 'au ra', sex: 'female'},
+	{id: 'aufx4bp_7', image: './au/f/xa/4/bp/7.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx4gt_1', image: './au/f/xa/4/gt/1.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx4gt_2', image: './au/f/xa/4/gt/2.jpg', race: 'au ra', sex: 'female'},
 	{id: 'aufx4ob_1', image: './au/f/xa/4/oyb/1.jpg', race: 'au ra', sex: 'female'},
@@ -378,6 +383,8 @@ var items = [
 	{id: 'aumx3_1', image: './au/m/xa/3/1.jpg', race: 'au ra', sex: 'male'},
 	{id: 'aumx4_1', image: './au/m/xa/4/1.jpg', race: 'au ra', sex: 'male'},
 	{id: 'aumx4_2', image: './au/m/xa/4/2.jpg', race: 'au ra', sex: 'male'},
+	{id: 'elf_1', image: './el/f/1.jpg', race: 'elezen', sex: 'female'},
+	{id: 'elf_2', image: './el/f/2.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfbw_1', image: './el/f/blw/1.jpg', race: 'elezen', sex: 'female'},
 //dupe	{id: 'elfbw_2', image: './el/f/blw/2.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfbp_1', image: './el/f/bp/1.jpg', race: 'elezen', sex: 'female'},
@@ -402,6 +409,7 @@ var items = [
 	{id: 'elfob_3', image: './el/f/oyb/3.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfob_4', image: './el/f/oyb/4.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfob_5', image: './el/f/oyb/5.jpg', race: 'elezen', sex: 'female'},
+	{id: 'elfob_6', image: './el/f/oyb/6.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfrp_1', image: './el/f/rp/1.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfrp_2', image: './el/f/rp/2.jpg', race: 'elezen', sex: 'female'},
 	{id: 'elfrp_3', image: './el/f/rp/3.jpg', race: 'elezen', sex: 'female'},
@@ -410,12 +418,14 @@ var items = [
 	{id: 'elm_2', image: './el/m/2.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmbw_1', image: './el/m/blw/1.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmbw_2', image: './el/m/blw/2.jpg', race: 'elezen', sex: 'male'},
+	{id: 'elmbw_3', image: './el/m/blw/3.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmbp_1', image: './el/m/bp/1.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmbp_2', image: './el/m/bp/2.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmgt_1', image: './el/m/gt/1.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmob_1', image: './el/m/oyb/1.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmob_2', image: './el/m/oyb/2.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmob_3', image: './el/m/oyb/3.jpg', race: 'elezen', sex: 'male'},
+	{id: 'elmob_4', image: './el/m/oyb/4.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmob_5', image: './el/m/oyb/5.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmob_6', image: './el/m/oyb/6.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmob_7', image: './el/m/oyb/7.jpg', race: 'elezen', sex: 'male'},
@@ -423,14 +433,14 @@ var items = [
 	{id: 'elmrp_1', image: './el/m/rp/1.jpg', race: 'elezen', sex: 'male'},
 	{id: 'elmrp_2', image: './el/m/rp/2.jpg', race: 'elezen', sex: 'male'},
 	{id: 'etc_1', image: './etc/1.jpg', race: 'etc', sex: 'female'},
-	{id: 'etc_2', image: './etc/2.jpg', race: 'etc', sex: 'female'},
+//awol	{id: 'etc_2', image: './etc/2.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_3', image: './etc/3.jpg', race: 'etc', sex: 'male'},
 	{id: 'etc_4', image: './etc/4.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_5', image: './etc/5.jpg', race: 'highlander', sex: 'male'},
 	{id: 'etc_6', image: './etc/6.jpg', race: 'middie', sex: 'male'},
 	{id: 'etc_7', image: './etc/7.jpg', race: 'miqote', sex: 'female'},
 	{id: 'etc_8', image: './etc/8.jpg', race: 'etc', sex: 'male'},
-	{id: 'etc_9', image: './etc/9.jpg', race: 'etc', sex: 'male'},
+//awol	{id: 'etc_9', image: './etc/9.jpg', race: 'etc', sex: 'male'},
 	{id: 'etc_10', image: './etc/10.jpg', race: 'viera', sex: 'male'},
 	{id: 'etc_11', image: './etc/11.jpg', race: 'etc', sex: 'male'},
 	{id: 'etc_12', image: './etc/12.jpg', race: 'etc', sex: 'other'},
@@ -438,12 +448,13 @@ var items = [
 	{id: 'etc_14', image: './etc/14.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_15', image: './etc/15.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_16', image: './etc/16.jpg', race: 'etc', sex: 'female'},
-	{id: 'etc_17', image: './etc/17.jpg', race: 'etc', sex: 'male'},
+//golem	{id: 'etc_17', image: './etc/17.jpg', race: 'etc', sex: 'male'},
 	{id: 'etc_18', image: './etc/18.jpg', race: 'etc', sex: 'male'},
 	{id: 'etc_19', image: './etc/19.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_20', image: './etc/20.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_21', image: './etc/21.jpg', race: 'etc', sex: 'female'},
 	{id: 'etc_22', image: './etc/22.jpg', race: 'etc', sex: 'male'},
+	{id: 'etc_23', image: './etc/23.jpg', race: 'etc', sex: 'female'},
 	{id: 'hlf_1', image: './hi/f/1.jpg', race: 'highlander', sex: 'female'},
 	{id: 'hlf_2', image: './hi/f/2.jpg', race: 'highlander', sex: 'female'},
 	{id: 'hlfbp_1', image: './hi/f/bp/1.jpg', race: 'highlander', sex: 'female'},
@@ -484,6 +495,7 @@ var items = [
 	{id: 'hrf_2', image: './hr/f/2.jpg', race: 'hrothgar', sex: 'female'},
 	{id: 'hrfbw_1', image: './hr/f/blw/1.jpg', race: 'hrothgar', sex: 'female'},
 	{id: 'hrfbw_2', image: './hr/f/blw/2.jpg', race: 'hrothgar', sex: 'female'},
+	{id: 'hrfbw_3', image: './hr/f/blw/3.jpg', race: 'hrothgar', sex: 'female'},
 	{id: 'hrfbp_1', image: './hr/f/bp/1.jpg', race: 'hrothgar', sex: 'female'},
 	{id: 'hrfbp_2', image: './hr/f/bp/2.jpg', race: 'hrothgar', sex: 'female'},
 	{id: 'hrfgt_1', image: './hr/f/gt/1.jpg', race: 'hrothgar', sex: 'female'},
@@ -516,6 +528,7 @@ var items = [
 	{id: 'lafd_3', image: './la/f/dun/3.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafd_4', image: './la/f/dun/4.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafd_5', image: './la/f/dun/5.jpg', race: 'lala', sex: 'female'},
+	{id: 'lafd_6', image: './la/f/dun/6.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdbp_1', image: './la/f/dun/bp/1.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdbp_2', image: './la/f/dun/bp/2.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdbp_3', image: './la/f/dun/bp/3.jpg', race: 'lala', sex: 'female'},
@@ -540,6 +553,7 @@ var items = [
 	{id: 'lafdob_8', image: './la/f/dun/oyb/8.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdob_9', image: './la/f/dun/oyb/9.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdob_10', image: './la/f/dun/oyb/10.jpg', race: 'lala', sex: 'female'},
+	{id: 'lafdob_11', image: './la/f/dun/oyb/11.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdrp_1', image: './la/f/dun/rp/1.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdrp_2', image: './la/f/dun/rp/2.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafdrp_3', image: './la/f/dun/rp/3.jpg', race: 'lala', sex: 'female'},
@@ -557,6 +571,7 @@ var items = [
 	{id: 'lafdrp_16', image: './la/f/dun/rp/16.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafp_1', image: './la/f/pla/1.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafpbw_1', image: './la/f/pla/blw/1.jpg', race: 'lala', sex: 'female'},
+	{id: 'lafpbw_2', image: './la/f/pla/blw/2.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafpbp_1', image: './la/f/pla/bp/1.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafpbp_2', image: './la/f/pla/bp/2.jpg', race: 'lala', sex: 'female'},
 	{id: 'lafpbp_3', image: './la/f/pla/bp/3.jpg', race: 'lala', sex: 'female'},
@@ -666,7 +681,7 @@ var items = [
 	{id: 'mdfrp_8', image: './md/f/rp/8.jpg', race: 'middie', sex: 'female'},
 	{id: 'mdfrp_9', image: './md/f/rp/9.jpg', race: 'middie', sex: 'female'},
 	{id: 'mdfrp_10', image: './md/f/rp/10.jpg', race: 'middie', sex: 'female'},
-	{id: 'mdfrp_11', image: './md/f/rp/11.jpg', race: 'middie', sex: 'female'},
+//golem	{id: 'mdfrp_11', image: './md/f/rp/11.jpg', race: 'middie', sex: 'female'},
 	{id: 'mdm_1', image: './md/m/1.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdm_2', image: './md/m/2.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdm_3', image: './md/m/3.jpg', race: 'middie', sex: 'male'},
@@ -688,6 +703,7 @@ var items = [
 	{id: 'mdmgt_2', image: './md/m/gt/2.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdmgt_3', image: './md/m/gt/3.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdmgt_4', image: './md/m/gt/4.jpg', race: 'middie', sex: 'male'},
+	{id: 'mdmgt_5', image: './md/m/gt/5.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdmob_1', image: './md/m/oyb/1.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdmob_2', image: './md/m/oyb/2.jpg', race: 'middie', sex: 'male'},
 	{id: 'mdmob_4', image: './md/m/oyb/4.jpg', race: 'middie', sex: 'male'},
@@ -758,6 +774,7 @@ var items = [
 	{id: 'mqfmob_15', image: './mq/f/moo/oyb/15.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfmob_16', image: './mq/f/moo/oyb/16.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfmob_17', image: './mq/f/moo/oyb/17.jpg', race: 'miqote', sex: 'female'},
+	{id: 'mqfmob_18', image: './mq/f/moo/oyb/18.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfmrp_1', image: './mq/f/moo/rp/1.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfmrp_2', image: './mq/f/moo/rp/2.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfmrp_3', image: './mq/f/moo/rp/3.jpg', race: 'miqote', sex: 'female'},
@@ -794,6 +811,7 @@ var items = [
 	{id: 'mqfsbp_7', image: './mq/f/sun/bp/7.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfsbp_8', image: './mq/f/sun/bp/8.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfsbp_9', image: './mq/f/sun/bp/9.jpg', race: 'miqote', sex: 'female'},
+	{id: 'mqfsbp_10', image: './mq/f/sun/bp/10.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfsgt_1', image: './mq/f/sun/gt/1.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfsgt_2', image: './mq/f/sun/gt/2.jpg', race: 'miqote', sex: 'female'},
 	{id: 'mqfsgt_3', image: './mq/f/sun/gt/3.jpg', race: 'miqote', sex: 'female'},
@@ -900,6 +918,7 @@ var items = [
 	{id: 'vifbp_9', image: './vi/f/bp/9.jpg', race: 'viera', sex: 'female'},
 	{id: 'vifbp_10', image: './vi/f/bp/10.jpg', race: 'viera', sex: 'female'},
 	{id: 'vifbp_11', image: './vi/f/bp/11.jpg', race: 'viera', sex: 'female'},
+	{id: 'vifbp_12', image: './vi/f/bp/12.jpg', race: 'viera', sex: 'female'},
 	{id: 'vifgt_1', image: './vi/f/gt/1.jpg', race: 'viera', sex: 'female'},
 	{id: 'vifgt_2', image: './vi/f/gt/2.jpg', race: 'viera', sex: 'female'},
 	{id: 'vifgt_3', image: './vi/f/gt/3.jpg', race: 'viera', sex: 'female'},
@@ -944,6 +963,7 @@ var items = [
 	{id: 'vimgt_9', image: './vi/m/gt/9.jpg', race: 'viera', sex: 'male'},
 	{id: 'vimgt_10', image: './vi/m/gt/10.jpg', race: 'viera', sex: 'male'},
 	{id: 'vimgt_11', image: './vi/m/gt/11.jpg', race: 'viera', sex: 'male'},
+	{id: 'vimgt_12', image: './vi/m/gt/12.jpg', race: 'viera', sex: 'male'},
 	{id: 'vimob_1', image: './vi/m/oyb/1.jpg', race: 'viera', sex: 'male'},
 	{id: 'vimob_2', image: './vi/m/oyb/2.jpg', race: 'viera', sex: 'male'},
 	{id: 'vimob_3', image: './vi/m/oyb/3.jpg', race: 'viera', sex: 'male'},
@@ -998,6 +1018,7 @@ var pickerUI = new PickerUI(myPicker, {
         var remaining = Math.max(0, totalEbins - favorites - eliminated - 1);
 
         $("#remaining").text(remaining);
+		$("#totalEbins").text(totalEbins);
 		},
 });
 
